--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p class="osty">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero alias molestias omnis voluptatem veniam ullam, corrupti, dolore quos porro quaerat saepe ipsum eum quisquam cumque, sapiente fugit sit fugiat illum.
+    </p>
 </body>
 </html>
